# flp

./: .dir-locals.el  .gitignore  .gitmodules  Makefile  README.md  cabal.project  default.nix  shell.nix  stack.yaml
binary-heap/: binary-heap.cabal
binary-heap/src/: Lib.hs
braun-heap/: braun-heap.cabal
braun-heap-cli/: Main.hs  braun-heap-cli.cabal
braun-heap-gui/: braun-heap-gui.cabal  cabal.project  default.nix
braun-heap-gui/src/: Main.hs
braun-heap-singletons/: braun-heap-singletons.cabal
braun-heap-singletons/src/BraunHeap/: Singletons.hs
braun-heap-typelits/: braun-heap-typelits.cabal
braun-heap-typelits/src/BraunHeap/: TypeLits.hs
braun-heap/app/: Main.hs
braun-heap/src/: BraunHeap.hs
practicals/: practicals.cabal
practicals/src/: Lib.hs  flp-cv4.pl  flp-input2.pl  flp-turing.pl
turing/: TuringData.hs  TuringFuncs.hs  TuringMain.hs  TuringParse.hs  turing.cabal
turing-haskell/: TuringFuncs.hs  TuringMain.hs  TuringParse.hs  machine.tg  turing.cabal
turing-prolog/: .gitignore  Makefile  README  flp-turing.pl  input-forum.txt
turing-prolog/test/: binary-counter-input.txt  binary-counter-output.txt  busy-beaver-input.txt  busy-beaver-output.txt  busy-beaver.txt  forum-blanks-input.txt  forum-blanks-output.txt  forum-trap-output.txt  palindrome-detector-false-input.txt  palindrome-detector-false-output.txt  palindrome-detector-true-input.txt  palindrome-detector-true-output.txt  run.sh
