cabal-version:       2.2
name:                practicals
version:             0.1.0.0
license:             BSD-3-Clause
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
build-type:          Simple

common ghc-opts
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs
                      -O2

library
  import: ghc-opts
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >=4.11 && <4.13
