name:                turing
version:             0.1.0.0
license:             BSD3
author:              Jakub Zárybnický
maintainer:          jakub@zarybnicky.com
build-type:          Simple
cabal-version:       >=1.10

executable turing
  main-is:             TuringMain.hs
  default-language:    Haskell2010
  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-uni-patterns
                      -Wincomplete-record-updates
                      -Wredundant-constraints
                      -Wmonomorphism-restriction
                      -fwarn-tabs
                      -O2
                      -fdiagnostics-color=never

  other-modules:       TuringData
                       TuringFuncs
                       TuringParse
  build-depends:       base >=4.11 && <4.12
                     , parsec >=3.1 && <3.2
